ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "holalegalario"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/actions.blue-green: |
      {
        "type":"forward",
        "forwardConfig":{
          "targetGroups":[
            {
              "serviceName":"holalegalario-blue",
              "servicePort":"80",
              "weight":80
            },
            {
              "serviceName":"holalegalario-green",
              "servicePort":"80",
              "weight":20
            }
          ]
        }
      }
  labels:
    app: holalegalario
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: blue-green
                port:
                  name: use-annotation
